--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "spotify-plus-plus-server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/App.js",
+	"main": "src/server.js",
   "scripts": {
-    "test": "test"
+		"start": "node src/server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JamesHarrisonZa/spotify-plus-plus-server.git"
   },
-  "author": "",
+	"author": "James Harrison",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JamesHarrisonZa/spotify-plus-plus-server/issues"
