--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "spotify-plus-plus-server",
   "version": "1.0.0",
   "description": "",
-	"main": "src/server.js",
+  "main": "src/server.js",
   "scripts": {
-		"start": "node src/server.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JamesHarrisonZa/spotify-plus-plus-server.git"
   },
-	"author": "James Harrison",
+  "author": "James Harrison",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JamesHarrisonZa/spotify-plus-plus-server/issues"
   },
   "homepage": "https://github.com/JamesHarrisonZa/spotify-plus-plus-server#readme",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0"
   }
 }
